--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   },
   "dependencies": {
     "babel": "^5.8.38",
+    "bcrypt": "^1.0.3",
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "express-graphql": "^0.6.11",
-    "express-jwt": "^5.3.0",
     "graphql": "^0.11.2",
     "graphql-date": "^1.0.3",
+    "jsonwebtoken": "^7.4.3",
     "mongoose": "^4.11.9",
     "nodemon": "^1.11.0"
   }
