--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "babel": "^5.8.38",
     "bcrypt": "^1.0.3",
+    "casl": "^1.0.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "express-graphql": "^0.6.11",
